<resources>
    <string name="app_name">Madar Soft</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="job_title">Job title</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="age_not_valid">Age not valid</string>
</resources>