<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.first.FirstActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/begin_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="32dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="32dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/begin_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/begin_guideline"
                app:layout_constraintTop_toBottomOf="@+id/logo_image">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/age_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/begin_guideline"
                app:layout_constraintTop_toBottomOf="@+id/username_input">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/age_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/age"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/job_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/begin_guideline"
                app:layout_constraintTop_toBottomOf="@+id/age_input">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/job_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/job_title"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/gender"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toStartOf="@+id/begin_guideline"
                app:layout_constraintTop_toBottomOf="@+id/job_input" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/begin_guideline"
                app:layout_constraintTop_toBottomOf="@+id/gender_text">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/male_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/male" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/female_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/custom_button"
                android:enabled="false"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/begin_guideline"
                app:layout_constraintTop_toBottomOf="@+id/gender_group"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>